# sample-glfw3

./: .gitignore  CMakeLists.txt  README.md
Dependencies/glfw-3/lib64/pkgconfig/: glfw3.pc
Dependencies/glfw-3/share/doc/GLFW/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_13d22ab85df5814c4cefa381ddf10f04.html  dir_8daac8d80174c3c2bda04ac826a4ad1b.html  dir_ba65fa1a825da90904e40408085adac9.html  dir_dcbd26bb56a8c6682c7e5a2579bdd00d.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8dox.html  input_guide.html  internal_8dox.html  internals_guide.html  intro_8dox.html  (+21 more)
Test-app/: CMakeLists.txt
Test-app/src/: main.cpp
